feat: Updated BDD code against review comments